<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et3_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="手机号码"
        android:ems="10"
        android:inputType="phone">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et3_2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="请输入短信内容"
        android:gravity="top|left"
        android:ems="10"
        android:inputType="textMultiLine"/>

    <Button
        android:id="@+id/btn3_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choosenum" 
        android:onClick="choosenum"/>

    <Button
        android:id="@+id/btn3_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choosemsg" 
        android:onClick="choosemsg"/>

    <Button
        android:id="@+id/btn3_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendmsg" 
        android:onClick="sendmsg"/>
    
    <Button
        android:id="@+id/btnback3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:onClick="back" />

</LinearLayout>
